--- a/DisplayApp/Views/Shared/_Layout.cshtml
+++ b/DisplayApp/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Auth" asp-action="Logout">Logout</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Calls" asp-action="CdrList">CallHistory</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Calls" asp-action="CdrsList">CallHistory</a>
                         </li>
                     </ul>
                 </div>
