--- a/DisplayApp/Views/Calls/CdrsList.cshtml
+++ b/DisplayApp/Views/Calls/CdrsList.cshtml
@@ -26,7 +26,18 @@
                 </div>
             </div>
         </div>
-        <button class="btn btn-primary" type="submit">Get CDR List</button>
+        <div class="row">
+            <div class="col-md-2">
+
+                <button class="btn btn-primary" type="submit">Get CDR List</button>
+            </div>
+            <div class="col-md-2">
+                <div id="spinner" class="spinner-border text-danger " role="status" style="display: none;">
+                    <span class="sr-only"></span>
+                </div>
+            </div>
+        </div>
+
     </form>
 
     <div class="table-responsive mt-4">
@@ -51,16 +62,15 @@
 </div>
 
 @section Scripts {
-
     <script>
         $(document).ready(function () {
             var table = $('#cdrTable').DataTable();
 
             $('#cdrForm').on('submit', function (event) {
                 event.preventDefault();
-
                 const startDate = $('#startDate').val();
                 const endDate = $('#endDate').val();
+                $('#spinner').show(); // Show the spinner
 
                 fetch(`/Calls/CdrListData?startDate=${startDate}&endDate=${endDate}`)
                     .then(response => {
@@ -93,6 +103,9 @@
                     })
                     .catch(error => {
                         console.error("Error fetching data:", error);
+                    })
+                    .finally(() => {
+                        $('#spinner').hide(); // Hide the spinner
                     });
             });
 
@@ -112,7 +125,4 @@
             }
         });
     </script>
-
-
-
 }
