--- a/DisplayApp/Views/Shared/_Layout.cshtml
+++ b/DisplayApp/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-white" asp-area="" asp-controller="Calls" asp-action="CdrsList">CallHistory</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Recording" asp-action="RecordingList">RecordingList</a>
+                            </li>
                         }
                     </ul>
                     <ul class="navbar-nav ml-right mr-4">
