--- a/DisplayApp/Views/Recording/RecordingList.cshtml
+++ b/DisplayApp/Views/Recording/RecordingList.cshtml
@@ -26,7 +26,7 @@
         </div>
         <div class="row">
             <div class="col-md-2">
-                <button class="btn btn-primary" type="submit">Get CDR List</button>
+                <button class="btn btn-primary" type="submit">Get Recording List</button>
             </div>
             <div class="col-md-2">
                 <div id="spinner" class="spinner-border text-danger" role="status" style="display: none;">
@@ -36,8 +36,23 @@
         </div>
     </form>
 
-    <!-- Container for audio player -->
-    <div id="audioContainer"></div>
+    <!-- Modal for audio player -->
+    <div class="modal fade" id="audioModal" tabindex="-1" aria-labelledby="audioModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="audioModalLabel">Audio Player</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <audio id="audioPlayer" controls></audio>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="table-responsive mt-4">
         <table id="cdrTable" class="table table-striped table-bordered" style="width:100%">
@@ -64,6 +79,35 @@
     <script>
         $(document).ready(function () {
             var table = $('#cdrTable').DataTable();
+
+            // Event listener for play button clicks
+            $(document).on('click', '.play-button', function () {
+                var recordgroup = $(this).data('recordgroup');
+                var uniqueid = $(this).data('uniqueid');
+                var recordid = $(this).data('recordid');
+
+                // Make AJAX call to play the recording
+                $.ajax({
+                    url: '/Recording/PlayRecording?recordgroup=' + recordgroup + '&uniqueid=' + uniqueid + '&recordid=' + recordid,
+                    type: 'GET',
+                    success: function (response) {
+                        let responseData = JSON.parse(response.data);
+                        if (responseData && responseData.data.data) {
+                            // Extract the audio data from the parsed response data
+                            var audioData = responseData.data.data;
+
+                            // Set the src attribute to a data URL representing the audio data
+                            $('#audioPlayer').attr('src', 'data:audio/wav;base64,' + audioData);
+
+                            // Open the modal
+                            $('#audioModal').modal('show');
+                        }
+                    },
+                    error: function (xhr, status, error) {
+                        console.log('Error playing recording:', error);
+                    }
+                });
+            });
 
             $('#cdrForm').on('submit', function (event) {
                 event.preventDefault();
@@ -147,41 +191,6 @@
 
                 table.row.add(row).draw();
             }
-
-            // Event listener for play button clicks
-            $(document).on('click', '.play-button', function () {
-                var recordgroup = $(this).data('recordgroup');
-                var uniqueid = $(this).data('uniqueid');
-                var recordid = $(this).data('recordid');
-
-                // Make AJAX call to play the recording
-                $.ajax({
-                    url: '/Recording/PlayRecording?recordgroup=' + recordgroup + '&uniqueid=' + uniqueid + '&recordid=' + recordid,
-                    type: 'GET',
-                    success: function (response) {
-                        let responseData = JSON.parse(response.data);
-                        if (responseData && responseData.data.data) {
-                            // Extract the audio data from the parsed response data
-                            var audioData = responseData.data.data;
-
-                            // Create an <audio> element dynamically
-                            var audio = new Audio();
-
-                            // Set the src attribute to a data URL representing the audio data
-                            audio.src = 'data:audio/wav;base64,' + audioData;
-
-                            // Append the <audio> element to the DOM (e.g., to a container element)
-                            document.getElementById('audioContainer').appendChild(audio);
-
-                            // Play the audio
-                            audio.play();
-                        }
-                    },
-                    error: function (xhr, status, error) {
-                        console.log('Error playing recording:', error);
-                    }
-                });
-            });
         });
     </script>
 }
