--- a/DisplayApp/Views/Recording/RecordingList.cshtml
+++ b/DisplayApp/Views/Recording/RecordingList.cshtml
@@ -54,6 +54,25 @@
         </div>
     </div>
 
+    @* Model for Transcription *@
+    <div class="modal fade" id="transcriptionModal" tabindex="-1" aria-labelledby="transcriptionModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="transcriptionModalLabel">Transcription</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <pre id="transcriptionText"></pre>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <div class="table-responsive mt-4">
         <table id="cdrTable" class="table table-striped table-bordered" style="width:100%">
             <thead>
@@ -82,31 +101,45 @@
             var table = $('#cdrTable').DataTable();
             //Event Listner for Transcribe Button
             $(document).on('click', '.transcribe-button', function () {
-                var recordgroup = $(this).data('recordgroup');
-                var uniqueid = $(this).data('uniqueid');
-                var recordid = $(this).data('recordid');
+                var recordGroup = $(this).data('recordgroup');
+                var uniqueId = $(this).data('uniqueid');
+                var recordId = $(this).data('recordid');
 
                 $.ajax({
-                    url: '/Recording/PlayRecording?recordgroup=' + recordgroup + '&uniqueid=' + uniqueid + '&recordid=' + recordid,
+                    url: '/Recording/PlayRecording',
                     type: 'GET',
+                    data: {
+                        recordgroup: recordGroup,
+                        uniqueid: uniqueId,
+                        recordid: recordId
+                    },
                     success: function (response) {
                         let responseData = JSON.parse(response.data);
-                        if (responseData && responseData.data.data) {
+                        if (responseData && responseData.data && responseData.data.data) {
                             // Extract the audio data from the parsed response data
                             var audioData = responseData.data.data;
-
                             $.ajax({
-                                url:''
-                            })
-                            console.log(audioData)
-
+                                url: '/Transcription/TranscribeAudio',
+                                type: 'POST',
+                                data: { encodedAudioData: audioData },
+                                success: function (transcriptionResponse) {
+                                    alert("Success");
+                                    console.log(transcriptionResponse);
+                                },
+                                error: function (xhr, status, error) {
+                                    console.error('Transcription error:', status, error);
+                                }
+                            });
+                        } else {
+                            console.error('Invalid response format:', response);
                         }
                     },
                     error: function (xhr, status, error) {
-                        console.log('Error playing recording:', error);
+                        console.error('Error playing recording:', status, error);
                     }
                 });
             });
+
 
             // Event listener for play button clicks
             $(document).on('click', '.play-button', function () {
@@ -147,7 +180,6 @@
                 event.preventDefault();
                 const startDate = $('#startDate').val();
                 const endDate = $('#endDate').val();
-
                 // Validation check for start date and end date
                 if (new Date(startDate) > new Date(endDate)) {
                     Swal.fire({
@@ -157,20 +189,14 @@
                     });
                     return;
                 }
-
                 $('#spinner').show(); // Show the spinner
-
                 let apiUrl = `/Recording/RecordingListData?startDate=${startDate}&endDate=${endDate}`;
-
                 console.log(apiUrl);
-
                 // Make an AJAX call to the controller action
                 $.ajax({
                     url: apiUrl,
                     type: 'GET',
                     success: function (data) {
-                        console.log(data); // Log the entire data object
-
                         // Check if data format is as expected
                         if (data && data.success && data.data) {
                             try {
