--- a/DisplayApp/Views/Comments/Comments.cshtml
+++ b/DisplayApp/Views/Comments/Comments.cshtml
@@ -1,6 +1,5 @@
 ﻿@model List<DisplayApp.Models.Domain.Comments>
-
-<a asp-controller="Comments" asp-action="Add" asp-route-UniqueId="@ViewBag.temp_uniqueId" class="btn btn-primary my-3">Add Comment</a>
+<a asp-controller="Comments" asp-action="Add" asp-route-uniqueId="@ViewBag.temp_uniqueId" class="btn btn-primary my-3">Add Comment</a>
 <table id="commentsTable" class="table table-striped table-bordered" style="width:100%">
     <thead>
         <tr>
